# Trading-Algorithm

./: .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  results.json
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  strategy_request.md
.github/workflows/: ci.yml
config/: default.toml
crates/trading-backtest/: Cargo.toml
crates/trading-backtest/src/: engine.rs  lib.rs  report.rs  statistics.rs
crates/trading-broker/: Cargo.toml
crates/trading-broker/src/: alpaca.rs  lib.rs  paper.rs
crates/trading-config/: Cargo.toml
crates/trading-config/src/: lib.rs  settings.rs
crates/trading-core/: Cargo.toml
crates/trading-core/src/: error.rs  lib.rs
crates/trading-core/src/traits/: broker.rs  data_source.rs  indicator.rs  mod.rs  strategy.rs
crates/trading-core/src/types/: mod.rs  ohlcv.rs  order.rs  position.rs  signal.rs  timeframe.rs
crates/trading-data/: Cargo.toml
crates/trading-data/src/: cache.rs  csv_source.rs  lib.rs
crates/trading-indicators/: Cargo.toml
crates/trading-indicators/benches/: indicators.rs
crates/trading-indicators/src/: lib.rs  momentum.rs  moving_average.rs  simd.rs  volatility.rs
crates/trading-monitor/: Cargo.toml
crates/trading-monitor/src/: dashboard.rs  lib.rs  logging.rs
crates/trading-risk/: Cargo.toml
crates/trading-risk/src/: lib.rs  portfolio_limits.rs  position_sizer.rs  risk_manager.rs  stop_loss.rs
crates/trading-strategies/: Cargo.toml
crates/trading-strategies/src/: lib.rs  ma_crossover.rs  mean_reversion.rs  momentum.rs  registry.rs  rsi_strategy.rs
data/: aapl_daily.csv  googl_daily.csv  msft_daily.csv  multi_symbol_daily.csv  qqq_daily.csv  spy_daily.csv  tsla_daily.csv
scripts/: generate_mock_data.py
src/: main.rs
src/cli/: mod.rs
src/cli/commands/: backtest.rs  live.rs  mod.rs  paper.rs  strategies.rs  validate.rs
