[package]
name = "trading-backtest"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Backtesting engine"

[dependencies]
trading-core.workspace = true
trading-indicators.workspace = true
trading-strategies.workspace = true
trading-risk.workspace = true
trading-broker.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
rust_decimal.workspace = true
rust_decimal_macros.workspace = true
tracing.workspace = true
