[package]
name = "trading-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Core types and traits for the trading system"

[dependencies]
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
rust_decimal.workspace = true
rust_decimal_macros.workspace = true
num-traits.workspace = true
thiserror.workspace = true
async-trait.workspace = true
uuid.workspace = true
tokio.workspace = true

[dev-dependencies]
