[package]
name = "trading-data"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Data sources for trading"

[dependencies]
trading-core.workspace = true
tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
csv.workspace = true
tracing.workspace = true
thiserror.workspace = true
