[package]
name = "trading-strategies"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Trading strategy implementations"

[dependencies]
trading-core.workspace = true
trading-indicators.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true

[dev-dependencies]
